--- a/01_synthetic_pipeline.ipynb
+++ b/01_synthetic_pipeline.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPZbv7vDUJ/yCw42HpFM9wo",
+      "authorship_tag": "ABX9TyPnwg/6ssOs/y0n64z5I8+a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,11 +28,62 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "!git clone https://github.com/maissa-soft/personaDRIVE-fusion.git\n",
+        "%cd personaDRIVE-fusion\n",
+        "!ls\n"
+      ],
       "metadata": {
-        "id": "Gq6xzutgljtY"
+        "id": "pN7irFJrmqxi",
+        "outputId": "119c4d12-9740-4fe4-8a81-e5dff3d78807",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'personaDRIVE-fusion'...\n",
+            "remote: Enumerating objects: 54, done.\u001b[K\n",
+            "remote: Counting objects: 100% (54/54), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (45/45), done.\u001b[K\n",
+            "remote: Total 54 (delta 17), reused 3 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (54/54), 17.33 KiB | 4.33 MiB/s, done.\n",
+            "Resolving deltas: 100% (17/17), done.\n",
+            "/content/personaDRIVE-fusion\n",
+            "01_synthetic_pipeline.ipynb  ex.py\t\t       README.md\n",
+            "data\t\t\t     notebooks\t\t       requirements.txt\n",
+            "environment.yml\t\t     personaDRIVE_setup.ipynb  src\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "id": "Gq6xzutgljtY",
+        "outputId": "01e40b18-225f-474a-ad89-f1043c288af9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fusion shape: torch.Size([4, 24])\n",
+            "Output: tensor([[-0.0068,  0.0261],\n",
+            "        [ 0.0498,  0.0861],\n",
+            "        [ 0.1137,  0.1011],\n",
+            "        [ 0.0932,  0.0648]], grad_fn=<AddmmBackward0>)\n"
+          ]
+        }
+      ],
       "source": [
         "import torch\n",
         "import torch.nn as nn\n",
