--- a/01_synthetic_pipeline.ipynb
+++ b/01_synthetic_pipeline.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "gpuType": "T4",
       "authorship_tag": "ABX9TyPnwg/6ssOs/y0n64z5I8+a",
       "include_colab_link": true
     },
@@ -13,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -34,11 +36,11 @@
         "!ls\n"
       ],
       "metadata": {
-        "id": "pN7irFJrmqxi",
-        "outputId": "119c4d12-9740-4fe4-8a81-e5dff3d78807",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pN7irFJrmqxi",
+        "outputId": "119c4d12-9740-4fe4-8a81-e5dff3d78807"
       },
       "execution_count": 3,
       "outputs": [
@@ -66,10 +68,10 @@
       "execution_count": 4,
       "metadata": {
         "id": "Gq6xzutgljtY",
-        "outputId": "01e40b18-225f-474a-ad89-f1043c288af9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "01e40b18-225f-474a-ad89-f1043c288af9"
       },
       "outputs": [
         {
